deployment/k8s/anakin-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels: 
    app: anakin-api
  name: anakin-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: anakin-api
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: anakin-api
    spec:
      containers:
        - image: vineetk1998/anakin-api:latest
          name: anakin-api
          ports: 
            - containerPort: 8000
              protocol: TCP

      restartPolicy: Always
status: {}

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: anakin-api
  name: anakin-api
spec:
  ports:
  - name: "8000"
    port: 8000
    targetPort: 8000
  selector:
    app: anakin-api
status:
  loadBalancer: {}

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: anakin-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: ad36d7fd768d44d0c9251bdeb86f489f-a3d9381b03a04826.elb.ap-south-1.amazonaws.com
    http:
      paths:
      - path: /api
        pathType: ImplementationSpecific
        backend:
          service:
            name: anakin-api
            port: 
              number: 8000

---

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: anakin-ingress
#   annotations:
#     kubernetes.io/ingress.class: nginx
#     kubernetes.io/tls-acme: "true"
#     cert-manager.io/cluster-issuer: "letsencrypt-prod"
# spec:
#   defaultBackend:
#     service:
#       name: anakin-api
#       port:
#         number: 8000
#   ingressClassName: anakin-ingress
#   rules:
#   - host: "ad36d7fd768d44d0c9251bdeb86f489f-a3d9381b03a04826.elb.ap-south-1.amazonaws.com"
#     http:
#       paths:
#       - path: /api
#         pathType: ImplementationSpecific
#         backend:
#           service:
#             name: anakin-api
#             port:
#               number: 8000


# # ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: anakin-api
# spec:
#   rules:
#   - host: "ad36d7fd768d44d0c9251bdeb86f489f-a3d9381b03a04826.elb.ap-south-1.amazonaws.com"
#     http:
#       paths:
#       - pathType: ImplementationSpecific
#         path: "/api"
#         backend:
#           service:
#             name: anakin-api
#             port:
#               number: 8000
